# sonic-nas-platform-S6000

./: Makefile.am  README.md  configure.ac  package.cfg
debian/: changelog  control
